--- a/news.html
+++ b/news.html
@@ -39,10 +39,11 @@
             <div class="row">
                <div class="col-sm-12">
                   <nav class="navbar navbar-expand-lg navbar-light">
-                     <a class="navbar-brand" href="index.html">
+                    <a class="navbar-brand" href="index.html">
                     
-                      <h4 class="d-none d-xl-block" style="color: white;">The Anthony Duclair Foundation</h4>
-                      <h6 class="d-block d-xl-none" style="color: white;">The Anthony Duclair Foundation</h6>                     </a>
+                      <img src="images/logo.png" alt="">
+
+                     </a>
                      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                      <span class="menu-btn d-inline-block" id="menu-btn">
                      <span class="line"></span>
@@ -152,7 +153,7 @@ following-black-ice-premiere/">
 
       <div class="iq-blog mt-5 wow pulse">
       <div class="iq-blog-img overflow-h">
-        <img alt="#" src="images/blog/five.jpeg"> 
+        <img alt="#" src="images/blog/five1.jpg"> 
      </div>
      <div class="iq-blog-content mt-4">
        <h4><a class="main-color" href="https://www.nhl.com/panthers/news/anthony-duclair-
@@ -248,8 +249,10 @@ racism-at-grassroots-level/c-317293712"> Hockey Diversity Alliance to fight raci
         </div> 
         </div>
       </div>
-      <p class="text-center mt-5 text-white">For more information about becoming a sponsor, please visit our Sponsors page.</p>
-
+      <div class="text-center pt-5">
+        <a href="sponsors.html" class=" mt-5 text-white">For more information about becoming a sponsor, please visit our Sponsors page.</a>
+    
+       </div>
     </div>
      <!-- Clients End -->
      <!-- Footer Start -->
