news issues completed

--- a/index.html
+++ b/index.html
@@ -449,8 +449,7 @@ style="z-index:13;background-color:#e14434;font-family:Poppins;text-transform:up
                 <img alt="#" src="images/blog/news5.jpg"> 
              </div>
              <div class="iq-blog-content mt-4">
-               <h4><a class="main-color" href="https://floridahockeynow.com/florida-panthers-anthony-duclair-
-        hockey-diversity/">
+               <h4><a class="main-color" href="https://floridahockeynow.com/florida-panthers-anthony-duclair-hockey-diversity/">
 
                  Florida Panthers, Anthony Duclair support #TapeOutHate movement</a></h4>
                  <div class="news-para">
@@ -467,8 +466,7 @@ style="z-index:13;background-color:#e14434;font-family:Poppins;text-transform:up
               <img alt="#" src="images/blog/two.jpeg"> 
            </div>
            <div class="iq-blog-content mt-4">
-               <h4><a class="main-color" href="https://wsvn.com/sports/anthony-duclair-shares-message-
-      following-black-ice-premiere/">
+               <h4><a class="main-color" href="https://wsvn.com/sports/anthony-duclair-shares-message-following-black-ice-premiere/">
                Anthony Duclair shares message following ‘Black Ice’ premiere</a></h4>
                <div class="news-para">
 
