all changes done

--- a/mission.html
+++ b/mission.html
@@ -107,24 +107,20 @@
           <div class="iq-title-box wow pulse">
     
           <h2 class="iq-title text-center mt-2" style="color: #17363a">Our Mission</h2>
-          <p class="mt-3 asdd" style="color: black;">Hockey is not for everyone. It’s time to change the narrative. The Anthony 
-            Duclair Foundation’s mission is to ensure that BIPOC children are granted 
-            safe and equal access to playing hockey in the United States. As it stands 
-            right now, black, Indigenous, Hispanic and Latinos account for less than 
-            15% of the hockey players in the US. These children are severely under-represented when compared to the greater US population. Because of the 
-            current systematic barriers that prevent minorities from participating in 
-            organized hockey, many of them will never get the opportunity to 
-            participate or get exposure to the game. <br/><br/>
-            We are committed to inspire a new and diverse generation of hockey 
-            players and fans by growing the game and making it more inclusive at the 
-            grassroots level. By making hockey accessible and safe for everyone, we 
-            will strengthen our connection to each other, to our communities, and to 
-            our fans.<br/><br/>
-            The Anthony Duclair Foundation will subsidize the costs related to playing 
-            organized hockey for minority youths, supply these children with 
-            equipment, allocate ice times and organize hockey related events and 
-            tournaments in conjunction with the Florida Panthers.<br/><br/>
-            It’s time to change the narrative.
+          <p class="mt-3 asdd" style="color: black;">Hockey is not for everyone. It’s time to change that narrative. The Anthony Duclair
+            Foundation’s mission is to ensure that Black, Indigenous, People of Color (BIPOC)
+            children are granted safe and equal access to playing hockey in North America. As it
+            stands right now, that population accounts for less than 15% of all hockey players. Those
+            children, specifically, are severely under-represented when compared
+            to the greater North American population. Because of the current systematic barriers that
+            prevent minorities from participating in organized hockey, many of them will never get the
+            opportunity to participate or be exposed to the game. <br><br>
+            We are committed to inspiring a new and diverse generation of hockey players and
+            hockey fans by building the game’s reputation and making it more inclusive from
+            both a cost and culture perspective at the grassroots level. By making hockey
+            accessible and safe for everyone, we will strengthen our connection to each other,
+            to our communities, and to our fans. <br><br>
+            We want to be game changers.
             </p>
          </div>
        
