donate button added

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
       <link rel="stylesheet" href="swiper/swiper-bundle.min.css">
       <link rel="stylesheet" href="css/animate.css">
 
+      <script src="https://donorbox.org/widget.js" paypalExpress="false"></script>
+
+
    </head>
    <body class="position-relative">
       <div id="loading">
@@ -272,23 +275,6 @@ style="z-index:13;background-color:#e14434;font-family:Poppins;text-transform:up
                 style="z-index:13;background-color:#e14434;font-family:Poppins;text-transform:uppercase;"
               ><a class="text-dark" href="mission.html">Read More</a> 
               </rs-layer>
-            <rs-layer
-                id="slider-5-slide-5-layer-6" 
-                class="rev-btn p-3 ml-2"
-                data-type="button"
-                data-rsp_ch="on"
-                data-xy="x:l,l,c,c;xo:113px,103px,0,-3px;yo:504px,488px,378px,293px;"
-                data-text="w:normal;s:15,14,14,12;l:55,45,45,35;fw:600;"
-                data-dim="minh:0px,none,none,none;"
-                data-padding="r:50,32,24,15;l:50,32,24,15;"
-                data-border="bor:0px,0px,0px,0px;"
-                data-frame_0="y:50,32,24,14;"
-                data-frame_1="st:1210;sp:1000;sR:1210;"
-                data-frame_999="o:0;st:w;sR:6790;"
-                data-frame_hover="c:#ffffff;bgc:#277379;bor:0px,0px,0px,0px;sp:100;e:Power1.easeInOut;bri:120%;"
-                style="z-index:13;background-color:#fff;font-family:Poppins;text-transform:uppercase;"
-              ><a class="text-dark" href="#">Donate Now</a> 
-              </rs-layer>
           </div>
           
   
@@ -301,8 +287,17 @@ style="z-index:13;background-color:#e14434;font-family:Poppins;text-transform:up
           
          </div>
          </div>
-         <div class="row mt-xl-5 pt-5 px-xl-4 px-2">
-          <div class="col-lg-12 mt-xl-5 pt-lg-5">
+         <!-- <section class="main-bg position-relative mb-0 pb-0">
+  <div class="container-fluid"> -->
+    <div class="row py-5 px-xl-4 px-2">
+      <div class="col-md-6 offset-md-3 text-center">
+        <h2 class="iq-title text-white text-center mb-5">Donate Now</h2>
+<iframe src="https://donorbox.org/embed/anthony-duclair-foundation" name="donorbox" allowpaymentrequest="allowpaymentrequest" seamless="seamless" frameborder="0" scrolling="no" height="100%" width="100%" style="max-width: 100%; min-width: 100%; max-height:none!important"></iframe>      </div>
+    </div>
+  <!-- </div> -->
+<!-- </section> -->
+         <div class="row bg-ensure mt-xl-5 pt-5 px-xl-4 px-2">
+          <div class="col-lg-12 mb-5">
            <div class="iq-top-event position-relative">
             <div class="" data-autoplay="true" data-loop="true" data-nav="true" data-dots="false" data-items="1" data-items-laptop="1" data-items-tab="1" data-items-mobile="1" data-items-mobile-sm="1" data-margin="30">
         <div class="item">
