--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@ style="z-index:13;background-color:#e14434;font-family:Poppins;text-transform:up
     <div class="row py-5 px-xl-4 px-2">
       <div class="col-md-6 offset-md-3 text-center">
         <h2 class="iq-title text-white text-center mb-5">Donate Now</h2>
-<iframe src="https://donorbox.org/embed/anthony-duclair-foundation" name="donorbox" allowpaymentrequest="allowpaymentrequest" seamless="seamless" frameborder="0" scrolling="no" height="100%" width="100%" style="max-width: 100%; min-width: 100%; max-height:none!important"></iframe>      </div>
+<iframe src="https://donorbox.org/embed/anthony-duclair-foundation" name="donorbox" allowpaymentrequest="allowpaymentrequest" seamless="seamless" frameborder="0" scrolling="no" height="900px" width="100%" style="max-width: 500px; min-width: 250px; max-height:none!important"></iframe>      </div>
     </div>
   <!-- </div> -->
 <!-- </section> -->
