--- a/anthony.html
+++ b/anthony.html
@@ -1,8 +1,6 @@
 <!doctype html>
 <html lang="en">
-   
-<!-- Mirrored from templates.iqonic.design/epy-html/index-3.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 03 Dec 2022 14:17:57 GMT -->
-<head>
+   <head>
       <!-- Required meta tags -->
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -222,12 +220,13 @@
          <div class="row align-items-center">
             <div class="col-lg-4 col-sm-12 my-4 sm-text-center">
              <ul class="list-inline mb-2">
-              <li class="list-inline-item text-white">duclairfoundation@gmail.com</li>
+              <li class="list-inline-item text-white">info@duclairfoundation.com</li>
              </ul>
 
              <ul class="list-inline mb-0 mt-2 iq-social d-inline-block position-relative">
-              <li class="list-inline-item mr-2 ml-2 position-relative"><a class="text-white" href="#"><i class="ion-social-facebook"></i></a></li>
-              <li class="list-inline-item mr-2 ml-2 position-relative"><a class="text-white" href="#"><i class="ion-social-twitter"></i></a></li>
+              <li class="list-inline-item mr-2 ml-2 position-relative"><a class="text-white" href="https://www.instagram.com/duclairfoundation/"><i class="ion-social-instagram-outline"></i></a></li>
+              <li class="list-inline-item mr-2 ml-2 position-relative"><a class="text-white" href="https://twitter.com/duclairfndation"><i class="ion-social-twitter"></i></a></li>
+              <li class="list-inline-item mr-2 ml-2 position-relative"><a class="text-white" href="https://www.linkedin.com/company/anthony-duclair-foundation/?viewAsMember=true"><i class="ion-social-linkedin"></i></a></li>
              </ul>
                
             </div>
@@ -364,6 +363,4 @@
 new WOW().init();
 </script>
 </body>
-
-<!-- Mirrored from templates.iqonic.design/epy-html/index-3.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 03 Dec 2022 14:18:31 GMT -->
 </html>
