--- a/event.html
+++ b/event.html
@@ -188,13 +188,13 @@
    </head>
    <body class="position-relative">
       <!-- loading -->
-      <!-- <div id="loading">
+      <div id="loading">
          <div id="loading-center">
             <div class="load-img">
                <img src="images/loader.gif" alt="loader">
             </div>
          </div>
-      </div> -->
+      </div>
       <!-- loading End -->
       <!-- Header -->
       <header id="main-header" class="header-main">
@@ -254,21 +254,30 @@
       </header>
       <!-- Header End -->
     <!-- Banner Start --> 
-    <div class="iq-breadcrumb" style="background: url(images/anthony-bg.webp); background-repeat: no-repeat; background-size: cover;">
+    <div class="iq-breadcrumb" style="background: url(images/bg-2.jpg); background-repeat: no-repeat; background-size: cover;">
     <div class="container">
       <div class="row">
        <div class="col-lg-12 col-md-12 position-relative">
         <img class="shape10" alt="#" src="images/shape-4.png">
-        <h2 class="text-white position-relative">Cocktail Lunch</h2>
+        <h2 class="text-white position-relative">Cocktail Lunch Recap</h2>
        </div>
-       
        </div>
        </div> 
      </div>
     <!-- Banner End -->
     <div class="container-fluid mt-5">
         <div class="row">
-            <div class="col-lg-12">      
+            <div class="col-12 mb-3">
+                <div class="container">
+                    <div class="iq-title-box wow pulse">
+                        <h2 class="iq-title text-center my-2" style="color: #17363a">Cocktail Lunch Recap</h2>
+                    </div>
+                    <video controls loop muted poster="images/poster.png" style="border-radius: 20px;" width="100%" height="100%">
+                        <source src="images/video/highlights.mp4" type="video/mp4">
+                    </video>
+                </div>
+            </div>
+            <div class="col-lg-12 mt-2">      
                 <div class="iq-title-box wow pulse">
                     <h2 class="iq-title text-center mt-2" style="color: #17363a">Cocktail Lunch</h2>
                 </div>
@@ -543,12 +552,13 @@
          <div class="row align-items-center">
             <div class="col-lg-4 col-sm-12 my-4 sm-text-center">
              <ul class="list-inline mb-2">
-              <li class="list-inline-item text-white">duclairfoundation@gmail.com</li>
+              <li class="list-inline-item text-white">info@duclairfoundation.com</li>
              </ul>
 
              <ul class="list-inline mb-0 mt-2 iq-social d-inline-block position-relative">
-              <li class="list-inline-item mr-2 ml-2 position-relative"><a class="text-white" href="#"><i class="ion-social-facebook"></i></a></li>
-              <li class="list-inline-item mr-2 ml-2 position-relative"><a class="text-white" href="#"><i class="ion-social-twitter"></i></a></li>
+              <li class="list-inline-item mr-2 ml-2 position-relative"><a class="text-white" href="https://www.instagram.com/duclairfoundation/"><i class="ion-social-instagram-outline"></i></a></li>
+              <li class="list-inline-item mr-2 ml-2 position-relative"><a class="text-white" href="https://twitter.com/duclairfndation"><i class="ion-social-twitter"></i></a></li>
+              <li class="list-inline-item mr-2 ml-2 position-relative"><a class="text-white" href="https://www.linkedin.com/company/anthony-duclair-foundation/?viewAsMember=true"><i class="ion-social-linkedin"></i></a></li>
              </ul>
                
             </div>
