--- a/news.html
+++ b/news.html
@@ -283,12 +283,13 @@ commercial/"> Anthony Duclair part of powerful new ad condeming racism in hockey
          <div class="row align-items-center">
             <div class="col-lg-4 col-sm-12 my-4 sm-text-center">
              <ul class="list-inline mb-2">
-              <li class="list-inline-item text-white">duclairfoundation@gmail.com</li>
+              <li class="list-inline-item text-white">info@duclairfoundation.com</li>
              </ul>
 
              <ul class="list-inline mb-0 mt-2 iq-social d-inline-block position-relative">
-              <li class="list-inline-item mr-2 ml-2 position-relative"><a class="text-white" href="#"><i class="ion-social-facebook"></i></a></li>
-              <li class="list-inline-item mr-2 ml-2 position-relative"><a class="text-white" href="#"><i class="ion-social-twitter"></i></a></li>
+              <li class="list-inline-item mr-2 ml-2 position-relative"><a class="text-white" href="https://www.instagram.com/duclairfoundation/"><i class="ion-social-instagram-outline"></i></a></li>
+              <li class="list-inline-item mr-2 ml-2 position-relative"><a class="text-white" href="https://twitter.com/duclairfndation"><i class="ion-social-twitter"></i></a></li>
+              <li class="list-inline-item mr-2 ml-2 position-relative"><a class="text-white" href="https://www.linkedin.com/company/anthony-duclair-foundation/?viewAsMember=true"><i class="ion-social-linkedin"></i></a></li>
              </ul>
                
             </div>
