--- a/event.html
+++ b/event.html
@@ -259,7 +259,7 @@
       <div class="row">
        <div class="col-lg-12 col-md-12 position-relative">
         <img class="shape10" alt="#" src="images/shape-4.png">
-        <h2 class="text-white position-relative">Cocktail Lunch Recap</h2>
+        <h2 class="text-white position-relative">Cocktail Launch</h2>
        </div>
        </div>
        </div> 
@@ -270,16 +270,16 @@
             <div class="col-12 mb-3">
                 <div class="container">
                     <div class="iq-title-box wow pulse">
-                        <h2 class="iq-title text-center my-2" style="color: #17363a">Cocktail Lunch Recap</h2>
+                        <h2 class="iq-title text-center my-2" style="color: #17363a">Cocktail Launch Recap</h2>
                     </div>
-                    <video controls loop muted poster="images/poster.png" style="border-radius: 20px;" width="100%" height="100%">
+                    <video controls loop playsinline muted poster="images/poster.png" style="border-radius: 20px;" width="100%" height="100%">
                         <source src="images/video/highlights.mp4" type="video/mp4">
                     </video>
                 </div>
             </div>
             <div class="col-lg-12 mt-2">      
                 <div class="iq-title-box wow pulse">
-                    <h2 class="iq-title text-center mt-2" style="color: #17363a">Cocktail Lunch</h2>
+                    <h2 class="iq-title text-center mt-2" style="color: #17363a">Cocktail Launch</h2>
                 </div>
                 <div class="section-padding gallery-section" id="gallery">
                     <div class="gallery sets">
