--- a/event.html
+++ b/event.html
@@ -272,7 +272,7 @@
                     <div class="iq-title-box wow pulse">
                         <h2 class="iq-title text-center my-2" style="color: #17363a">Cocktail Launch Recap</h2>
                     </div>
-                    <video controls loop playsinline muted poster="images/poster.png" style="border-radius: 20px;" width="100%" height="100%">
+                    <video controls loop muted poster="images/poster.png" style="border-radius: 20px;" width="100%" height="100%" playsinline>
                         <source src="images/video/highlights.mp4" type="video/mp4">
                     </video>
                 </div>
