--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         </div>
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="images/image.jpeg" alt="Third slide">
+      <img class="d-block w-100" src="images/slidethree.jpeg" alt="Third slide">
       <div class="carousel-caption pt-md-0 pt-5 mt-md-0 mt-5 d-flex h-100 align-items-center flex-column justify-content-center">
             <h5 class="display-2 display font-weight-bold text-white" style="background: rgba(34, 33, 33, 0.5);">Duclair Promotes Inclusion</h5>
             <p class="h4 displaypp"style="background: rgba(34, 33, 33, 0.5);">
