--- a/index.html
+++ b/index.html
@@ -269,7 +269,8 @@
            </div>
            <div class="iq-blog-content mt-4">
              <h4><a class="main-color" href="https://www.nhlpa.com/news/1-22448/anthony-duclair-launches-foundation-to-help-black-and-minority-youth-in-hockey"> 
-               ANTHONY DUCLAIR LAUNCHES FOUNDATION TO HELP BLACK AND MINORITY YOUTH IN HOCKEY</a></h4>
+               Anthony Duclair launches foundation to help black and minority youth in hockey
+               </a></h4>
                <div class="news-para">
                 <p class="mt-2 mb-0">When Anthony Duclair set out to establish his own foundation, he wasn’t sure what to expect in terms of support. He got his answer during this year’s NHL All-Star Game.</p>
 
