--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                              
                            </li>
                            <li class="nav-item ">
-                            <a class="nav-link" href="sponsors.html">Our Sponsors</a>
+                            <a class="nav-link" href="sponsors.html">Our Partners</a>
                           </li>
                           <li class="nav-item ">
                             <a class="nav-link" href="event.html">Events</a>
@@ -375,7 +375,7 @@
     </section>
  <hr>
 <a href="sponsors.html">
- <h2 class="text-center my-3 my-xl-5">Our Sponsors</h2></a>
+ <h2 class="text-center my-3 my-xl-5">Our Partners</h2></a>
  <div class="blue-bg p-5 overview-block-ptb">
   <div class="container">
 
@@ -409,10 +409,28 @@
      
    </div>
    <div class="text-center pt-5">
-    <a href="sponsors.html" class=" mt-5 text-white">For more information about becoming a sponsor, please visit our Sponsors page.</a>
+    <a href="sponsors.html" class=" mt-5 text-white">For more information about becoming a partner, please visit Our Partners page.</a>
 
    </div>
 
+ </div>
+ <div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <h2 class="text-center mt-5 mb-3">Subscribe to our Newsletter</h2>
+      <div class="row">
+        <div class="col-md-12">
+          <form class="form-inline mb-5 justify-content-center">
+        <div class="form-group mx-sm-3 mb-2">
+          <label for="inputPassword2" class="sr-only">Email</label>
+          <input type="email" class="form-control form-control-lg" id="inputPassword2" placeholder="Email">
+        </div>
+        <button type="submit" class="btn btn-primary mb-2">Submit</button>
+      </form>
+        </div>
+      </div>
+    </div>
+  </div>
  </div>
       <footer class="main-bg">
          <div class="container">
